--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     android:orientation="vertical"
     android:padding="8dip" >
 
-    <Button android:id="@+id/idAddList"
-        android:text="Creer Liste" />
+<!--     <Button android:id="@+id/idAddList" -->
+<!--         android:text="Creer Liste" /> -->
 
     <ExpandableListView
         android:id="@+id/idAllList"
