--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,18 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dip" >
-
-    <Button android:id="@+id/idAddList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Creer Liste" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
     <ExpandableListView
-        android:id="@+id/idAllList"
+        android:id="@+id/expandableView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ExpandableListView>
+    <!-- <Button android:id="@+id/idAddList" -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:text="Creer Liste" /> -->
 
 </LinearLayout>
