--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
-    <EditText
+    <TextView
         android:id="@+id/idNameList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/idDeleteList"
-        android:hint="@string/taskList" />
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:text="@string/listName"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <!-- A voir pour que le bouton prenne une taille carré -->
+    <!-- android:layout_alignParentLeft="true" -->
+    <!-- <EditText -->
+    <!-- android:id="@+id/idNameList" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:clickable="false" -->
+    <!-- android:focusable="false" -->
+    <!-- android:focusableInTouchMode="false" -->
+    <!-- android:hint="@string/taskList" /> -->
 
     <ImageButton
         android:id="@id/idDeleteList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/idNameList"
         android:layout_alignParentRight="true"
-        android:background="@drawable/trash_empty"
-        android:contentDescription="@string/deleteList" />
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/deleteList"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:scaleType="fitCenter"
+        android:src="@drawable/trash_empty" />
 
 </RelativeLayout>
