Add delete task and list

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <ExpandableListView
         android:id="@+id/expandableView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/idBottomBar"
+        android:transcriptMode="alwaysScroll" >
     </ExpandableListView>
-    <!-- <Button android:id="@+id/idAddList" -->
-    <!-- android:layout_width="match_parent" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:text="Creer Liste" /> -->
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@id/idBottomBar"
+        style="?android:attr/buttonBarStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/idAddList"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Creer Liste" />
+    </LinearLayout>
+
+</RelativeLayout>
