--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,15 +17,15 @@
         style="?android:attr/buttonBarStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true" >
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/idAddList"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Creer Liste" />
+            android:text="@string/addList" />
     </LinearLayout>
 
 </RelativeLayout>
