--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/idBottomBar"
+        android:focusableInTouchMode="true"
         android:transcriptMode="alwaysScroll" >
     </ExpandableListView>
 
