Delete some comments

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,17 +13,19 @@
         android:transcriptMode="alwaysScroll" >
     </ExpandableListView>
 
+    <!-- style="?android:attr/buttonBarStyle" -->
+
     <LinearLayout
         android:id="@id/idBottomBar"
-        style="?android:attr/buttonBarStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal" >
 
+        <!-- style="?android:attr/buttonBarButtonStyle" -->
+
         <Button
             android:id="@+id/idAddList"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/addList" />
