--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -8,20 +8,18 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/idModifyList"
+        android:layout_toLeftOf="@+id/idTaskChecked"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:text="@string/listName"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <!-- android:layout_alignParentLeft="true" -->
-    <!-- <EditText -->
-    <!-- android:id="@+id/idNameList" -->
-    <!-- android:layout_width="wrap_content" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:clickable="false" -->
-    <!-- android:focusable="false" -->
-    <!-- android:focusableInTouchMode="false" -->
-    <!-- android:hint="@string/taskList" /> -->
+    <TextView
+        android:id="@+id/idTaskChecked"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/idModifyList"
+        android:text="@string/taskChecked" />
 
     <ImageButton
         android:id="@id/idModifyList"
