--- a/res/layout/task.xml
+++ b/res/layout/task.xml
@@ -23,7 +23,8 @@
         android:id="@id/idModifyTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/idNameTask"
+        android:layout_alignBottom="@id/idCheckbox"
+        android:layout_alignTop="@id/idCheckbox"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/idDeleteTask"
         android:background="@android:color/transparent"
@@ -37,7 +38,8 @@
         android:id="@id/idDeleteTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/idNameTask"
+        android:layout_alignBottom="@id/idCheckbox"
+        android:layout_alignTop="@id/idCheckbox"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@android:color/transparent"
